# UnitreeA1MotorControl

./: CMakeLists.txt  README.md
docs/A1_motor/UnitreeMotorSDK_A1_Sup221201/: CMakeLists.txt  ReadMe.md
docs/A1_motor/UnitreeMotorSDK_A1_Sup221201/src/: changeID.cpp  test_motor.cpp
include/: C_timer.h  motor_control.h  periodic_rt_task.h  robot_paras.h  traj_generator.h
include/utils/: C_timer.h  periodic_rt_task.h
src/: calibration.cpp  motor_control.cpp  periodic_rt_task.cpp  rt_control.cpp  rt_control_multi_thread.cpp  rt_control_multi_thread2.cpp  traj_generator.cpp
src/leg_test/: multi_leg.cpp  single_leg.cpp
src/motor_test/: rt_control.cpp  rt_control_multi_thread.cpp  rt_control_multi_thread2.cpp
src/tools/: calibration.cpp  changeID.cpp
